--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <html>
     <head>
 	    <title></title>
+	    <title>브랜치</title>
 	</head>
 	<body>
 	    <section></section>
-		<header></header>
+            <header></header>
+	    <header>
+		    <h1>브랜치 기능</h1>
+	    </header>
+	    <section>
+		<ul>
+		    <li>브랜치 만들기</li>
+		    <li>브랜치 변경하기</li>
+		    <li>브랜치 병합하기</li>
+	       </ul>
+	    </section>
 	</body>
 </html>
